--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -27,6 +27,7 @@
     </style>
 
     <style name="TextContent.Title.Big">
+        <item name="android:textColor">@color/md_theme_light_onPrimary</item>
         <item name="android:textSize">22sp</item>
     </style>
 
@@ -40,35 +41,6 @@
         <item name="android:textSize">12sp</item>
     </style>
 
-<!--    <style name="TextContent">-->
-<!--        <item name="android:layout_width">wrap_content</item>-->
-<!--        <item name="android:layout_height">wrap_content</item>-->
-<!--        <item name="android:textColor">@android:color/white</item>-->
-<!--        <item name="fontFamily">@font/open_sans</item>-->
-<!--    </style>-->
 
-<!--    <style name="TextContent.Title">-->
-<!--        <item name="fontFamily">@font/open_sans_bold</item>-->
-<!--        <item name="android:textSize">18sp</item>-->
-<!--    </style>-->
-
-    <style name="TextContent.TitleDetails">
-<!--        <item name="fontFamily">@font/open_sans_bold</item>-->
-        <item name="android:textSize">24sp</item>
-    </style>
-
-    <style name="TextContent.SubtitleDetails">
-        <item name="android:textSize">22sp</item>
-<!--        <item name="android:textColor">@color/detail_text</item>-->
-    </style>
-
-    <style name="TextContent.Details">
-        <item name="android:textSize">18sp</item>
-    </style>
-
-    <style name="TextContent.Small">
-    <item name="android:textSize">12sp</item>
-<!--    <item name="android:textColor">@color/detail_text</item>-->
-    </style>
 
 </resources>
