--- a/app/src/main/res/menu/option_menu.xml
+++ b/app/src/main/res/menu/option_menu.xml
@@ -8,4 +8,10 @@
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="collapseActionView|always" />
 
+    <item
+        android:id="@+id/favorites"
+        android:icon="@drawable/ic_favorite_24"
+        android:title="@string/favorite"
+        app:showAsAction="always" />
+
 </menu>
