--- a/app/src/main/res/layout/activity_detail_user.xml
+++ b/app/src/main/res/layout/activity_detail_user.xml
@@ -13,6 +13,7 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/img_detail_avatar"
+            android:tint="@color/cardview_light_background"
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_marginStart="16dp"
@@ -196,8 +197,9 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
+        <ImageButton
             android:id="@+id/fab_favorite"
+            android:background="@null"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
@@ -208,7 +210,8 @@
             android:clickable="true"
             android:focusable="true"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/red500" />
 
         <!--        <ToggleButton-->
 <!--            android:id="@+id/toggle_favorite"-->
