--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,6 @@
     <color name="md_theme_light_secondaryContainer">#DAE2F9</color>
     <color name="md_theme_light_background">#FDFBFF</color>
     <color name="md_theme_light_onBackground">#1B1B1E</color>
+    <color name="red500">#F44336</color>
 
 </resources>
