--- a/app/src/main/res/layout/activity_detail_user.xml
+++ b/app/src/main/res/layout/activity_detail_user.xml
@@ -13,13 +13,13 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/img_detail_avatar"
-            android:tint="@color/cardview_light_background"
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
+            android:tint="@color/cardview_light_background"
             app:civ_border_width="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +38,6 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:text="@string/name"
-            android:textColor="@color/md_theme_light_onBackground"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/img_detail_avatar"
@@ -61,6 +60,7 @@
 
         <ImageView
             android:id="@+id/ic_location"
+            style="@style/ic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -71,8 +71,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/img_detail_avatar"
             app:layout_constraintTop_toBottomOf="@+id/tv_detail_username"
-            app:srcCompat="@drawable/ic_baseline_location_on_24"
-            app:tint="@color/md_theme_light_onBackground" />
+            app:srcCompat="@drawable/ic_baseline_location_on_24" />
 
         <TextView
             android:id="@+id/tv_detail_location"
@@ -82,7 +81,6 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:text="@string/location"
-            android:textColor="@color/md_theme_light_onBackground"
             app:layout_constraintBottom_toBottomOf="@+id/ic_location"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -91,6 +89,7 @@
 
         <ImageView
             android:id="@+id/ic_job"
+            style="@style/ic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -101,8 +100,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/img_detail_avatar"
             app:layout_constraintTop_toBottomOf="@+id/tv_detail_location"
-            app:srcCompat="@drawable/ic_baseline_work_24"
-            app:tint="@color/md_theme_light_onBackground" />
+            app:srcCompat="@drawable/ic_baseline_work_24" />
 
         <TextView
             android:id="@+id/tv_detail_company"
@@ -112,7 +110,6 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:text="@string/company"
-            android:textColor="@color/md_theme_light_onBackground"
             app:layout_constraintBottom_toBottomOf="@+id/ic_job"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -128,7 +125,6 @@
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:text="@string/repository"
-            android:textColor="@color/md_theme_light_onBackground"
             app:layout_constraintBottom_toBottomOf="@+id/tv_detail_following"
             app:layout_constraintEnd_toStartOf="@+id/tv_detail_following"
             app:layout_constraintStart_toStartOf="parent"
@@ -143,7 +139,6 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="32dp"
             android:text="@string/follower"
-            android:textColor="@color/md_theme_light_onBackground"
             app:layout_constraintBottom_toBottomOf="@+id/tv_detail_following"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tv_detail_following"
@@ -157,17 +152,16 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="32dp"
             android:text="@string/following"
-            android:textColor="@color/md_theme_light_onBackground"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/img_detail_avatar" />
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
+            style="@style/container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
-            android:background="@color/md_theme_light_primaryContainer"
             app:layout_constraintBottom_toTopOf="@+id/view_pager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -199,34 +193,19 @@
 
         <ImageButton
             android:id="@+id/fab_favorite"
-            android:background="@null"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
+            android:background="@null"
+            android:clickable="true"
             android:contentDescription="@string/favorite"
+            android:focusable="true"
             android:src="@drawable/ic_unfavorite_24"
             android:tag="Not Saved"
-            android:clickable="true"
-            android:focusable="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:tint="@color/red500" />
-
-        <!--        <ToggleButton-->
-<!--            android:id="@+id/toggle_favorite"-->
-<!--            android:layout_width="48dp"-->
-<!--            android:layout_height="48dp"-->
-<!--            android:layout_marginTop="32dp"-->
-<!--            android:layout_marginEnd="16dp"-->
-<!--            android:background="@drawable/favorite_toggle"-->
-<!--            android:focusable="false"-->
-<!--            android:focusableInTouchMode="false"-->
-<!--            android:textOff=""-->
-<!--            android:textOn=""-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent" />-->
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
