--- a/app/src/main/res/layout/item_row_user.xml
+++ b/app/src/main/res/layout/item_row_user.xml
@@ -9,13 +9,12 @@
     android:layout_marginTop="4dp"
     android:layout_marginRight="8dp"
     android:layout_marginBottom="4dp"
-    android:background="@color/design_default_color_primary"
     card_view:cardCornerRadius="16dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        style="@style/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/md_theme_light_primaryContainer"
         android:padding="8dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -34,12 +33,12 @@
 
         <TextView
             android:id="@+id/tv_item_name"
-            style="@style/TextContent.Title"
+            style="@style/TextContent.Title.onContainer"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:layout_toEndOf="@id/img_item_avatar"
-            android:textColor="@color/md_theme_light_onPrimaryContainer"
+
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toEndOf="@+id/img_item_avatar"
             card_view:layout_constraintTop_toTopOf="parent"
@@ -48,13 +47,12 @@
 
         <TextView
             android:id="@+id/tv_item_htmlurl"
-            style="@style/TextContent.Subtitle.Small"
+            style="@style/TextContent.Subtitle.Small.onContainer"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:ellipsize="end"
-            android:textColor="@color/md_theme_light_onPrimaryContainer"
             card_view:layout_constraintBottom_toBottomOf="parent"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toEndOf="@+id/img_item_avatar"
