--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,15 +3,42 @@
     <style name="Theme.Submission2Github" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/md_theme_light_primary</item>
-        <item name="colorPrimaryVariant">@color/md_theme_light_primaryContainer</item>
         <item name="colorOnPrimary">@color/md_theme_light_onPrimary</item>
-        <!-- Secondary brand color. -->
+        <item name="colorPrimaryContainer">@color/md_theme_light_primaryContainer</item>
+        <item name="colorOnPrimaryContainer">@color/md_theme_light_onPrimaryContainer</item>
         <item name="colorSecondary">@color/md_theme_light_secondary</item>
-        <item name="colorSecondaryVariant">@color/md_theme_light_secondaryContainer</item>
         <item name="colorOnSecondary">@color/md_theme_light_onSecondary</item>
+        <item name="colorSecondaryContainer">@color/md_theme_light_secondaryContainer</item>
+        <item name="colorOnSecondaryContainer">@color/md_theme_light_onSecondaryContainer</item>
+        <item name="colorTertiary">@color/md_theme_light_tertiary</item>
+        <item name="colorOnTertiary">@color/md_theme_light_onTertiary</item>
+        <item name="colorTertiaryContainer">@color/md_theme_light_tertiaryContainer</item>
+        <item name="colorOnTertiaryContainer">@color/md_theme_light_onTertiaryContainer</item>
+        <item name="colorError">@color/md_theme_light_error</item>
+        <item name="colorErrorContainer">@color/md_theme_light_errorContainer</item>
+        <item name="colorOnError">@color/md_theme_light_onError</item>
+        <item name="colorOnErrorContainer">@color/md_theme_light_onErrorContainer</item>
+        <item name="android:colorBackground">@color/md_theme_light_background</item>
+        <item name="colorOnBackground">@color/md_theme_light_onBackground</item>
+        <item name="colorSurface">@color/md_theme_light_surface</item>
+        <item name="colorOnSurface">@color/md_theme_light_onSurface</item>
+        <item name="colorSurfaceVariant">@color/md_theme_light_surfaceVariant</item>
+        <item name="colorOnSurfaceVariant">@color/md_theme_light_onSurfaceVariant</item>
+        <item name="colorOutline">@color/md_theme_light_outline</item>
+        <item name="colorOnSurfaceInverse">@color/md_theme_light_inverseOnSurface</item>
+        <item name="colorSurfaceInverse">@color/md_theme_light_inverseSurface</item>
+        <item name="colorPrimaryInverse">@color/md_theme_light_primaryInverse</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+    </style>
+
+
+    <style name="container">
+        <item name="android:background">@color/md_theme_light_primaryContainer</item>
+    </style>
+    <style name="ic">
+        <item name="android:tint">@color/md_theme_light_onBackground</item>
     </style>
 
 
@@ -21,13 +48,20 @@
     </style>
 
     <style name="TextContent.Title">
-        <item name="android:textColor">@color/md_theme_light_onPrimary</item>
+        <item name="android:textColor">@color/md_theme_light_onBackground</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">16sp</item>
+
+    </style>
+    <style name="TextContent.Title.onContainer">
+        <item name="android:textColor">@color/md_theme_light_onPrimaryContainer</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
+
     </style>
 
     <style name="TextContent.Title.Big">
-        <item name="android:textColor">@color/md_theme_light_onPrimary</item>
+        <item name="android:textColor">@color/md_theme_light_onBackground</item>
         <item name="android:textSize">22sp</item>
     </style>
 
@@ -40,6 +74,12 @@
         <item name="android:textColor">@color/md_theme_light_onPrimary</item>
         <item name="android:textSize">12sp</item>
     </style>
+
+    <style name="TextContent.Subtitle.Small.onContainer">
+        <item name="android:textColor">@color/md_theme_light_onPrimaryContainer</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
 
 
 
